care/force-app/main/default/objects/Request_Data__c/Request_Data__c.object-meta.xml
<CustomObject>
    <description>This objects holds the GDPR member data,it&apos;s status and other key information</description>
    <label>Request Data</label>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{DD}-{000000}</displayFormat>
        <label>Request Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request Data</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>