care/force-app/main/default/objects/Request_Data__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>18 Character Account Id of Accounts being flagged for RTBF/Retention Process</description>
    <inlineHelpText>18 Character Account Id of Accounts being flagged for RTBF/Retention Process</inlineHelpText>
    <label>Account ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Request Data</relationshipLabel>
    <relationshipName>Request_Data</relationshipName>
    <type>Lookup</type>
</CustomField>