care/force-app/main/default/objects/Request_Data__c/fields/Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info__c</fullName>
    <description>Provide comments and notes about this record</description>
    <inlineHelpText>Provide comments and notes about this record</inlineHelpText>
    <label>Additional Info</label>
    <type>TextArea</type>
</CustomField>