care/force-app/main/default/objects/Request_Data__c/fields/Global_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Global_Member_ID__c</fullName>
    <description>Unique identifier of  Sterling platform account</description>
    <label>Global Member ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>