care/force-app/main/default/objects/Request_Data__c/fields/Last_Validation_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Validation_Date__c</fullName>
    <description>Specifies the last validation date of GDPR requested account.</description>
    <label>Last Validation Date</label>
    <type>Date</type>
</CustomField>