care/force-app/main/default/objects/Request_Data__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <description>Tells whether the request is RTBF or Retention</description>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RTBF</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>RTBF Fail - Invalid Record Type</fullName>
            </value>
            <value>
                <fullName>RTBF Fail - Employer Program</fullName>
            </value>
            <value>
                <fullName>RTBF Fail - Safety Case</fullName>
            </value>
            <value>
                <fullName>RTBF Fail - Premium</fullName>
            </value>
            <value>
                <fullName>RTBF Fix</fullName>
            </value>
            <value>
                <fullName>RTBF Override</fullName>
            </value>
            <value>
                <fullName>RTBF Complete</fullName>
            </value>
            <value>
                <fullName>RTBF Do Not Process</fullName>
            </value>
            <value>
                <fullName>RTBF Anonymize</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>