care/force-app/main/default/objects/Request_Data__c/fields/Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Response_Date__c</fullName>
    <description>Date specifies the day when the ananymization process is completed.</description>
    <label>Response Date</label>
    <type>Date</type>
</CustomField>