care/force-app/main/default/objects/Request_Data__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>This field is used to hold the status of delete request.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Safety Case</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Invalid Record Type</fullName>
            </value>
            <value>
                <fullName>Employer Program</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>RTBF Fail - Invalid Record Type</fullName>
            </value>
            <value>
                <fullName>RTBF Fail - Employer Program</fullName>
            </value>
            <value>
                <fullName>RTBF Fail - Safety Case</fullName>
            </value>
            <value>
                <fullName>RTBF Fail - Premium</fullName>
            </value>
            <value>
                <fullName>RTBF Fix</fullName>
            </value>
            <value>
                <fullName>RTBF Override</fullName>
            </value>
            <value>
                <fullName>RTBF Complete</fullName>
            </value>
            <value>
                <fullName>RTBF Do Not Process</fullName>
            </value>
            <value>
                <fullName>RTBF Anonymize</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>