care/force-app/main/default/objects/Request_Data__c/fields/Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>Validation_Status__c</fullName>
    <description>Specifies the validations status of a particular GDPR account.</description>
    <label>Validation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Safety Case</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Invalid Record Type</fullName>
            </value>
            <value>
                <fullName>Employer Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>