care/force-app/main/default/objects/Request_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Request_Type__c</columns>
    <columns>Global_Member_ID__c</columns>
    <columns>Validation_Status__c</columns>
    <columns>Last_Validation_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Response_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>