care/force-app/main/default/objects/Request_Data__c/listViews/New.listView-meta.xml
<ListView>
    <fullName>New</fullName>
    <columns>NAME</columns>
    <columns>Global_Member_ID__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Validation_Status__c</columns>
    <columns>Last_Validation_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Response_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>New</label>
    <language>en_US</language>
</ListView>