care/force-app/main/default/objects/Request_Data__c/listViews/RTBF.listView-meta.xml
<ListView>
    <fullName>RTBF</fullName>
    <columns>NAME</columns>
    <columns>Account_ID__c</columns>
    <columns>Global_Member_ID__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Response_Date__c</columns>
    <columns>Validation_Status__c</columns>
    <columns>Last_Validation_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Type__c</field>
        <operation>equals</operation>
        <value>RTBF</value>
    </filters>
    <label>RTBF</label>
    <language>en_US</language>
</ListView>